# ste-optimized

./: .gitignore  BATCHED_REPLAY_PLAN_PORTABLE.md  README.md  pyproject.toml
configs/: angry-1h.yaml  angry-smoke.yaml  angry.yaml
data/esd-angry-source/: source.csv
data/esd-smoke-prepared/: bases.jsonl  manifest.json  pairs.jsonl
data/esd-smoke-source/: selection.json  source.csv
runs/angry-1h-seed42-20260720T0452Z/: best_transform.pt  checkpoint.pt  checkpoint_panel_screen.json  final_transform.pt  training.jsonl
runs/angry-1h-seed43-20260720T0452Z/: best_transform.pt  checkpoint.pt  checkpoint_panel_screen.json  final_transform.pt  training.jsonl
runs/angry-b32-whisper-smoke-20260720T0450Z/: final_transform.pt  training.jsonl
runs/angry-full-seed42-u45-20260720T0549Z/: checkpoint_panel_full.json  checkpoint_panel_selected_alpha073.json  final_transform.pt
runs/angry-full-seed43-u30-20260720T0549Z/: checkpoint_panel_full.json  final_transform.pt
runs/angry-smoke-20260720T020804Z/: resolved_config.yaml  selected_contrast.pt
runs/angry-smoke-20260720T021143Z/: last_transform.pt  report.json  resolved_config.yaml  selected_contrast.pt
runs/angry-smoke-20260720T022139Z/: last_transform.pt  report.json  resolved_config.yaml  (+1 more)
scripts/: materialize_cached_esd_smoke.py  materialize_esd_arrow.py
tests/: test_checkpoint_evaluation.py  test_codec.py  test_hooks.py  test_parity.py  test_sampling_data.py  test_smoke.py  test_ste.py  test_training_bounds.py  test_training_chunks.py  test_transform.py  test_wer_metrics.py  test_whisper_asr.py
(+350 files in other folders)
